# RustRayMarching

./: .gitignore  Cargo.toml  README.md  build_video.bat  buildvid.bat  rma.rhai  test.rma copy.json  test.rma.json  test2.rma.json  test3.rma.json
.swm/: entrypoint.i4d0v.sw.md  implementing-an-integration.thsdx.sw.md  swimm.json
scenes/cube/: test.rma.json
scenes/test/: test.rma.json
scenes/test_scene/: test.rma.json
scenes/test_scene/scripts/: JuliaQ1.lua  JuliaQ2.lua  JuliaQ4.lua  Quat3.lua
scenes/test_scene2/: test.rma.json
scenes/test_scene2/scripts/: InX.lua  InZ.lua  Mandel.lua  OrbitRad.lua  OrbitSpeed.lua  XOrbit.lua  YOrbit.lua  inOrbitRadius.lua
scenes/test_scene3/: test.rma.json  test_small.rma.json  test_small_mat.rma.json
src/: cameras.rs  configuration.rs  evaluator.rs  film.rs  filter.rs  helpers.rs  light.rs  main.rs  modifier.rs  postprocessor.rs  primitive.rs  renderers.rs  sampler.rs  scene.rs  shader.rs  solver.rs  transition.rs
