[package]
name = "ray_marching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
image = "0.24.1"
lazy_static = "1.3"
vecmath = "1.0.0"
simple_gaussian = "0.6.0"
rand = "0.7"
rand_distr = "0.2"
fastrand = "1.7.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rhai = "1.7.0"